refactor: 이름 스플릿 메서드 불변 리스트로 수정